@@ -10,6 +10,8 @@ git-annex (7.20190616) UNRELEASED; urgency=medium
     avoid using http range to resume, since a range "bytes=0-" is an unusual
     edge case that it's best to avoid relying on working. This is known to
     fix a case where importfeed downloaded a partial feed from such a server.
+  * importfeed: When there's a problem parsing the feed, --debug will
+    output the feed content that was downloaded.
 
  -- Joey Hess <id@joeyh.name>  Sat, 15 Jun 2019 12:38:25 -0400
 
